--- a/package.json
+++ b/package.json
@@ -9,26 +9,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
-    "@angular/cdk": "^17.0.0",
-    "@angular/common": "^17.3.0",
-    "@angular/compiler": "^17.3.0",
-    "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.0",
-    "@angular/material": "^17.0.0",
-    "@angular/platform-browser": "^17.3.0",
-    "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/router": "^17.3.0",
+    "@angular/animations": "^17.3.7",
+    "@angular/cdk": "^17.3.7",
+    "@angular/common": "^17.3.7",
+    "@angular/compiler": "^17.3.7",
+    "@angular/core": "^17.3.7",
+    "@angular/forms": "^17.3.7",
+    "@angular/material": "^17.3.7",
+    "@angular/platform-browser": "^17.3.7",
+    "@angular/platform-browser-dynamic": "^17.3.7",
+    "@angular/router": "^17.3.7",
     "@ngx-translate/core": "^15.0.0",
-    "@oblique/oblique": "^11.0.1",
+    "@oblique/oblique": "^11.1.1",
     "@popperjs/core": "^2.0.0",
     "@rdfjs-elements/formats-pretty": "^0.6.7",
+    "@rdfjs/fetch-lite": "^3.2.2",
     "@zazuko/env": "^2.1.1",
+    "@zazuko/shacl-playground": "^2.0.0",
     "angular-oauth2-oidc": "^17.0.0",
     "buffer": "^6.0.3",
     "jwt-decode": "^4.0.0",
     "process": "^0.11.10",
-    "rdf-validate-shacl": "^0.5.3",
+    "rdf-transform-graph-imports": "^0.2.3",
+    "rdf-validate-shacl": "^0.5.5",
     "rxjs": "~7.8.0",
     "string-to-stream": "^3.0.1",
     "tslib": "^2.3.0",
@@ -36,12 +39,14 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.0",
-    "@angular/cli": "^17.3.0",
-    "@angular/compiler-cli": "^17.3.0",
+    "@angular-devkit/build-angular": "^17.3.6",
+    "@angular/cli": "^17.3.6",
+    "@angular/compiler-cli": "^17.3.7",
     "@types/clownface": "^2.0.7",
+    "@types/get-stream": "^3.0.2",
     "@types/jasmine": "~5.1.0",
-    "@types/rdf-validate-shacl": "^0.4.6",
+    "@types/rdf-validate-shacl": "^0.4.7",
+    "@types/rdfjs__fetch-lite": "^3.0.10",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
