--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,7 @@ pages:
     expose_as: 'public'
     paths:
       - dist
- # rules:
-  #  - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+  rules:
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+    - when: manual
+      if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
