--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/clownface": "^2.0.7",
     "@types/get-stream": "^3.0.2",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.12.12",
     "@types/rdf-validate-shacl": "^0.4.7",
     "@types/rdfjs__fetch-lite": "^3.0.10",
     "jasmine-core": "~5.1.0",
@@ -54,5 +55,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2"
+  },
+  "browser": {
+    "url": false
   }
 }
