--- a/package.json
+++ b/package.json
@@ -19,24 +19,22 @@
     "@angular/platform-browser": "^19.2.17",
     "@angular/platform-browser-dynamic": "^19.2.17",
     "@angular/router": "^19.2.17",
+    "@lindas/env": "^3.0.4",
+    "@lindas/shacl-playground": "^3.0.1",
     "@ngx-translate/core": "^16.0.4",
     "@oblique/oblique": "^13.3.3",
     "@popperjs/core": "^2.0.0",
     "@rdfjs-elements/formats-pretty": "^0.6.7",
     "@rdfjs/fetch-lite": "^3.2.2",
     "angular-oauth2-oidc": "^19.0.0",
-    "buffer": "^6.0.3",
     "jwt-decode": "^4.0.0",
-    "process": "^0.11.10",
     "rdf-transform-graph-imports": "^0.2.3",
     "rdf-validate-shacl": "^0.5.5",
     "rxjs": "~7.8.0",
     "string-to-stream": "^3.0.1",
     "tslib": "^2.3.0",
     "util": "^0.12.5",
-    "zone.js": "~0.15.1",
-    "@lindas/env": "^3.0.1",
-    "@lindas/shacl-playground": "^3.0.1"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.19",
@@ -48,12 +46,15 @@
     "@types/node": "^20.12.12",
     "@types/rdf-validate-shacl": "^0.4.7",
     "@types/rdfjs__fetch-lite": "^3.0.10",
+    "buffer": "^6.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
     "typescript": "~5.8.3"
   },
   "browser": {
