--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@angular/platform-browser-dynamic": "^19.2.17",
     "@angular/router": "^19.2.17",
     "@lindas/env": "^3.0.4",
+    "@lindas/formats-lazy": "^1.0.0",
     "@lindas/shacl-playground": "^3.0.1",
     "@ngx-translate/core": "^16.0.4",
     "@oblique/oblique": "^13.3.3",
     "@popperjs/core": "^2.0.0",
-    "@rdfjs-elements/formats-pretty": "^0.6.7",
     "@rdfjs/fetch-lite": "^3.2.2",
     "angular-oauth2-oidc": "^19.0.0",
     "jwt-decode": "^4.0.0",
