--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,7 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - main
 
 jobs:
   build:
@@ -27,6 +23,9 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Run tests
+        run: npx ng test --watch=false --browsers=ChromeHeadless
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
