Standardize Docker image tag to test_YYYY-MM-DD_HHmmss
Replace branch-main-YYYYMMDDHHmmss format with test_YYYY-MM-DD_HHmmss
to align with the naming convention used across all LINDAS services
(admin-ch, ld-widget, varnish-post, clear-sparql-cache, cube-creator).

Updated docker.yml CI tag and promote.yaml rollback-test tag format.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -48,7 +48,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=sha,prefix=
             type=raw,value=latest,enable={{is_default_branch}}
-            type=raw,value=branch-main-{{date 'YYYYMMDDHHmmss'}},enable={{is_default_branch}}
+            type=raw,value=test_{{date 'YYYY-MM-DD_HHmmss'}},enable={{is_default_branch}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
